--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,24 @@ android {
     buildToolsVersion "19.0.3"
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        release {
+            storeFile file("jim-key.keystore")
+            storePassword "pvs460"
+            keyAlias "Jimdox"
+            keyPassword "pvs460"
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
